--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a{
     padding-bottom: 0;
 }
 
-.framework-content p{
+.framework-content p, li{
     color: white;
     font-weight: normal;
     line-height: 1.8em;
@@ -199,6 +199,13 @@ a{
     font-style: italic;
     color: white;
 }
+
+mark { 
+    background-color: yellow;
+    border-radius: 30%;
+    padding: 5px 2%;
+    color: black;
+  }
 
 @media(max-width: 800px){
 
