--- a/style.css
+++ b/style.css
@@ -205,7 +205,30 @@ mark {
     border-radius: 30%;
     padding: 5px 2%;
     color: black;
-  }
+}
+
+.framework .right_des{
+    margin-top: 3%;
+    float: left;
+    width: 60%;
+}
+
+.risk_im {
+    margin: 0 12%;
+}
+.risk_im > img {
+    height: 370px;
+}
+
+.framework .left_emerge_image{
+    margin-top: 5%;
+    float: right;
+    width: 40%;
+}
+
+.framework .left_emerge_image > img{
+    height: 320px;
+}
 
 @media(max-width: 800px){
 
@@ -347,6 +370,29 @@ mark {
         margin-top: 0%;
     }
 
+    .framework .right_des{
+        float: none;
+        width: 100%;
+    }
+    
+    .framework .left_emerge_image{
+        margin-top: 5%;
+        float: none;
+        width: 100%;
+    }
+    
+    .framework .left_emerge_image > img{
+        height: 250px;
+    }
+
+    .risk_im {
+        margin: 0;
+        opacity: 0;
+    }
+    .risk_im > img {
+        height: 0px;
+    }
+
 }
 
 @media(max-width: 400px){
@@ -368,5 +414,6 @@ mark {
         border-bottom: 2px solid coral;
         padding-left: 0;
     }
+
 
 }
