image height fixed

--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ mark {
     }
     
     .framework .left_emerge_image > img{
-        height: 250px;
+        height: 50vh;
     }
 
     .risk_im {
