--- a/style.css
+++ b/style.css
@@ -299,6 +299,14 @@ mark {
     margin-left: 10px;
 }
 
+#tester{
+    width: 100%;
+    margin: 0;
+    height: 400px;
+    padding: 0
+}
+
+
 @media(max-width: 800px){
 
     #home-header{
